# vista-chatbot

./: LICENSE  README.md  autoreply.py  mc_integration.py  pyproject.toml  requirements.txt
config/: bot.json
configs/: bot.json
scripts/: build_corpus.py  build_retriever.py  build_wiki_index.py  evaluate.py  install_minescript_entry.py  query_rag.py  run_chat_api.py  smoke_test.py  train_lora.py
src/: __init__.py  chunking.py  config.py  dataset_build.py  evaluate.py  logging_utils.py  model.py  prompts.py  qa_data.py  retriever.py  runtime.py  text_cleaning.py  train_lora.py
src/vista_chatbot/: __init__.py  chunking.py  config.py  conversation.py  llm.py  logging_utils.py  paths.py  retriever.py  rules.py  runtime.py  text.py  web_api.py
tests/: test_chunking.py  test_retriever_extractive.py  test_runtime.py  test_text.py  test_web_api.py
